# lfa-lab

./: .gitignore  .gitmodules  .travis.yml  Brewfile  CMakeLists.txt  Config.h.in  README.md  README.txt  _config.yml  api.html  citation.html  download.html  genindex.html  glossary.html  index.html  install.html  license.html  main-page.txt  objects.inv  py-modindex.html  python.cmake  python_config.py  requirements.txt  search.html  searchindex.js  setup-env.sh.in  setup.py  tutorial.html  update.sh
_sources/: api.txt  citation.txt  index.txt  install.txt  license.txt
_static/: documentation_options.js
demo/: CMakeLists.txt  aggressive_coarse.py  biharmonic.py  biharmonic_twogrid.py  block_jac.py  block_jac_2x2.py  block_rb_jac_2x2.py  demo.py  jacobi-direct.py  jump_coeff_2d.py  poisson.py  rb_jacobi.py  report.py  run-all.py  sampling_properties.py  trivial_blocks.py  tutorial01-poisson.py  tutorial02-plot.py  tutorial03-smoothing.py  tutorial04-twogrid.py  tutorial05-stencils.py  tutorial06-multigrid.py
doc/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py.in  download.rst  glossary.rst  index.rst  install.rst  license.rst  tutorial.rst
docker/: base.dockerfile  build.sh  container-main.sh  run-test-script.sh  run-test-setting.sh  run-tests.sh  testing.dockerfile
lfa_lab/: CMakeLists.txt  __init__.py  __main__.py  analysis.py  block_smoother.py  dag.py  gallery.py  operator.py  plot.py  report.py  smoother.py  stencil.py  two_grid.py  util.py
lfa_lab/core/: BdMatrix.cpp  BdMatrix.h  BdMatrix.i  BlockMatrix.cpp  BlockMatrix.h  BlockSb.cpp  BlockSb.h  BlockSb.i  BlockStencil.cpp  BlockStencil.h  BlockStencil.i  CMakeLists.txt  CartIterator.h  ClusterSymbol.cpp  ClusterSymbol.h  Common.cpp  Common.h  ConstantSb.cpp  ConstantSb.h  ConstantSb.i  DenseStencil.cpp  DenseStencil.h  DenseStencil.i  DiscreteDomain.cpp  DiscreteDomain.h  Eigen.i  EigenSolver.cpp  EigenSolver.h  ExEigenSolver.cpp  ExEigenSolver.h  FoContext.cpp  FoContext.h  FoProperties.cpp  FoProperties.h  FoProperties.i  FoStencil.cpp  FoStencil.h  FoStencil.i  FoStencil2.cpp  FoStencil2.h  (+75 more)
templates/: cpp  hpp  python  swig
test/: CMakeLists.txt  all.py  analysis_test.py  block_test.py  gallery_test.py  operator_test.py  profile_block.py  smoother_test.py  stencil_test.py  util_test.py
